@@ -1,8 +1,0 @@
-package Net::Async::Webservice::Common;
-use strict;
-use warnings;
-use 5.010;
-
-# ABSTRACT: Some common classes to write async webservice clients
-
-1;
